--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.weaksloth</groupId>
     <artifactId>dolphinscheduler-sdk-java</artifactId>
-    <version>1.0.0</version>
+    <version>2.0.5-RELEASE</version>
 
     <properties>
         <lombok.version>1.18.22</lombok.version>
